<resources>
    <string name="app_name">CheckInTime</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mercedes_maria">Mercedes Maria López González</string>
    <string name="bienvenida">Bienvenido Christopher Flores! 👋</string>
    <string name="perfil_de_usuario">PERFIL DE USUARIO</string>
    <string name="cambiar_contra">Cambiar contraseña</string>
    <string name="cambiar_contrasenya"><u>Cambiar contraseña</u></string>
    <string name="alumne">ALUMNO</string>
    <string name="christopher_name">Christopher Joshua Flores Cabanillas</string>
    <string name="Christopher_email">2023_christopher.flores@iticbcn.cat</string>
    <string name="correoLogin">...@iticbcn.cat</string>
    <string name="olvidate_la_contrase_a">¿Olvidate la contraseña?</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="contra_actual">christopher|@fl7ic=</string>
    <string name="nuevaContra">i7tcBc%$-Flo=Chr1s70</string>
    <string name="guardar_preferencias">Guardar preferencias:</string>
    <string name="modo_nocturno">Modo nocturno:</string>
    <string name="tama_o_de_letras">Tamaño de letras:</string>
    <string name="idioma">Idioma:</string>
    <string name="notificaciones">Notificaciones:</string>
    <string name="configuracion">CONFIGURACIÓN</string>
    <string name="ingresar_como_profesor">Ingresar como profesor</string>
    <string name="ingresar_como_alumno">Ingresar como alumno</string>
    <string name="formulario_de_registro">FORMULARIO DE REGISTRO</string>
    <string name="escoge_un_usuario"><u>Escoge un usuario:</u></string>
    <string name="admin_email">admin@iticbcn.cat</string>
    <string name="correo">Correo</string>
    <string name="nombre">Nombre</string>
    <string name="contra">Contraseña</string>
    <string name="apellido">Apellido</string>
    <string name="apellidos">Flores Cabanillas</string>
    <string name="nombres">Christopher Joshua</string>
    <string name="curso">Curso</string>
    <string name="aula">Aula</string>
    <string name="num_aula">A04</string>
    <string name="num_curso">1 - 2</string>
    <string name="ciclo">Ciclo</string>
    <string name="DAM">Desarrollo de aplicaciones multiplataforma</string>
    <string name="grupo">Grupo</string>
    <string name="letra_grupo">A-B-C</string>
    <string name="email_profesor">christopher.flores@iticbcn.cat</string>
    <string name="gestion_usuarios">GESTIÓN DE USUARIOS</string>
    <string name="fernanda_name">Fernanda Campos Mendieta</string>
    <string name="byron_name">Byron David Cevallos Trujillo</string>
    <string name="alex_name">Alex Ruben Cobos Veloz</string>
    <string name="pedro_name">Pedro Guaraca Cuñas</string>
    <string name="diego_name">Diego Javier Cajas Logroño</string>
    <string name="angel_name">Angel Leon Coloma</string>
    <string name="jorge_name">Jorge Xavier Paredes</string>
    <string name="ariana_name">Ariana Gomez Salazar</string>
    <string name="laya_name">Laya Pérez Torres</string>
    <string name="claudia_name">Claudia Campo Pérez </string>
    <string name="ariana_email_prof">ariana.gomez@iticbcn.cat</string>
    <string name="jorge_email_prof">jorge.paredes@iticbcn.cat</string>
    <string name="angel_email_prof">angel.leon@iticbcn.cat</string>
    <string name="diego_email_prof">diego.cajas@iticbcn.cat</string>
    <string name="alex_email_prof">alex.cobos@iticbcn.cat</string>
    <string name="byron_email_prof">byron.cevallos@iticbcn.cat</string>
    <string name="fernanda_email_prof">fernanda.campos@iticbcn.cat</string>
    <string name="mercedes_email_prof">mercedes.lopez@iticbcn.cat</string>

    <string name="fernanda_email_alum">2022_fernanda.gomez@iticbcn.cat</string>
    <string name="jorge_email_alum">2024_jorge.paredes@iticbcn.cat</string>
    <string name="angel_email_alum">2021_angel.leon@iticbcn.cat</string>
    <string name="diego_email_alum">2023_diego.cajas@iticbcn.cat</string>
    <string name="alex_email_alum">2020_alex.cobos@iticbcn.cat</string>
    <string name="byron_email_alum">2024_byron.cevallos@iticbcn.cat</string>
    <string name="laya_email_alum">2023_laya.torres@iticbcn.cat</string>
    <string name="claudia_email_alum">2021_claudia.perez@iticbcn.cat</string>
    <string name="jmiguel94_gmail_com">jmiguel94@gmail.com</string>
    <string name="gestion_asistencia">Gestión asistencia</string>
    <string name="Christopher_profesor">christopher.flores@iticbcn.cat</string>
    <string name="nombre_profesor">Christopher Flores</string>
    <string name="profesor">PROFESOR</string>
    <string name="admin">ADMIN</string>
    <string name="gestion_de_usuario">Gestión de usuario</string>
    <string name="horario">HORARIO</string>
    <string name="lista">LISTA</string>
    <string name="mod_asist"><u>Modificar asistencia</u></string>
    <string name="mostrar_lista">Mostrar lista</string>


    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="asistencia">ASISTENCIA</string>
    <string name="alumno">Alumno</string>
    <string name="asignaturas">Asignaturas</string>
    <string name="alex_ru_z">Alex Ruíz...</string>
    <string name="ingresar">Ingresar</string>
    <string name="texto_consulta_admin">Haz clic en \'Consultar al administrador\' para ponerte en contacto con el adminnistrador.</string>
    <string name="texto_consultas_preguntas">Haz clic en \'Preguntas frecuentes\' para ver las consultas más comunes de los usuarios.</string>
    <string name="preguntas_frecuentes">Preguntas frecuentes</string>
    <string name="consulta_preguntas">¿Tienes dudas sobre alguna función de la aplicación?</string>
    <string name="consultar_al_administrador">Consultar al administrador</string>
    <string name="consulta_admin">¿Tienes alguna consulta o necesitas resolver un inconveniente?</string>
    <string name="modifica_asistencia">MODIFICA ASISTENCIA</string>
    <string name="ayuda_y_contacto">AYUDA Y CONTACTO</string>
    <string name="cursos_de_catal_cnl">Cursos de català CNL</string>
    <string name="per_tal_d_oferir_una_zona_d_estudi">Per tal d’oferir una zona d’estudi...</string>
    <string name="us_animem_a_inscriure_us_als">Us animem a inscriure-us als...</string>
    <string name="formulari_de_prefer_ncia_d_optativa">Formulari de preferència d\'optativa</string>
    <string name="us_adjuntem_l_enlla_al_formulari">Us adjuntem l\'enllaç al formulari...</string>
    <string name="l_alumnat_interessat_en_convalid">L’alumnat interessat en convalid...</string>
    <string name="a_partir_d_ara_els_links_de_trello">A partir d\'ara els links de Trello...</string>
    <string name="enquesta_de_situaci_laboral">Enquesta de situació laboral</string>
    <string name="si_us_plau_contesteu_el_q_estiona">Si us plau contesteu el qüestiona...</string>
    <string name="convalidacions">Convalidacions</string>
    <string name="entrega_de_proyecto_final">Entrega de proyecto final</string>
    <string name="adjunto_mi_proyecto_de_desarrol">Adjunto mi proyecto de desarrol...</string>
    <string name="duda_sobre_algoritmos">Duda sobre algoritmos</string>
    <string name="no_entiendo_c_mo_implementar">No entiendo cómo implementar...</string>
    <string name="solicitud_de_reuni_n">Solicitud de reunión</string>
    <string name="quisiera_agendar_una_reuni_n_pa">Quisiera agendar una reunión pa...</string>
    <string name="revisi_n_de_c_digo">Revisión de código</string>
    <string name="envi_mi_ejercicio_de_estructura">Envié mi ejercicio de estructura...</string>
    <string name="me_gustar_a_que_se_trabaje_en_un">Me gustaría que se trabaje en un...</string>
    <string name="propuesta_de_tema_para_proyecto">Propuesta de tema para proyecto</string>
    <string name="problema_con_el_entorno">Problema con el entorno</string>
    <string name="tengo_problemas_para_configurar">Tengo problemas para configurar...</string>
    <string name="p_gina_pincipal">Página Pincipal</string>
</resources>