<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo_pantalla"
    tools:context=".Profesor_ayudaContacto">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/header"
        android:name="com.example.checkintime.Header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout="@layout/fragment_header" />

    <ImageView
        android:id="@+id/menu"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="15dp"
        android:elevation="3dp"
        android:layout_marginTop="25dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/fondoMenu"
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:background="@color/fondo_menu"
        android:elevation="2dp"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/perfil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="180dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/foto"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/fondo_circulo"
                    android:src="@drawable/foto_perfil" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/profesor"
                    android:textSize="10sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:text="@string/nombre_profesor"
                    android:textSize="13sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Christopher_profesor"
                    android:textSize="9sp" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="50dp"
            android:background="#B5B0B0" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:backgroundTint="@color/fondo_menu"
            app:cardCornerRadius="6dp">

            <TextView
                android:id="@+id/perfilUsuario"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:clickable="true"
                android:drawablePadding="10dp"
                android:focusable="true"
                android:gravity="center_vertical"
                android:text="Perfil de usuario"
                app:drawableStartCompat="@drawable/customer" />
        </androidx.cardview.widget.CardView>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#B5B0B0" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:backgroundTint="@color/fondo_menu"
            app:cardCornerRadius="6dp">

            <TextView
                android:id="@+id/lista"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:clickable="true"
                android:drawablePadding="10dp"
                android:focusable="true"
                android:gravity="center_vertical"
                android:text="@string/gestion_asistencia"
                app:drawableStartCompat="@drawable/checklist" />
        </androidx.cardview.widget.CardView>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#B5B0B0" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:backgroundTint="@color/fondo_menu"
            app:cardCornerRadius="6dp">

            <TextView
                android:id="@+id/configuracion"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:clickable="true"
                android:drawablePadding="10dp"
                android:focusable="true"
                android:gravity="center_vertical"
                android:text="Configuracion"
                app:drawableStartCompat="@drawable/settings" />
        </androidx.cardview.widget.CardView>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#B5B0B0" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/ayuda_y_contacto"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/menu"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/ayuda"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="75dp"
        app:cardCornerRadius="6dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#B5B0B0" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:text="@string/consulta_preguntas"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:lineSpacingExtra="10dp"
                android:text="@string/texto_consultas_preguntas"
                android:textSize="12sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="25dp"
                android:backgroundTint="@color/fondo_fragment"
                android:text="@string/preguntas_frecuentes"
                android:textColor="@color/black"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="40dp"
        android:background="#B5B0B0"
        app:layout_constraintTop_toBottomOf="@id/ayuda" />

    <androidx.cardview.widget.CardView
        android:id="@+id/contacto"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="40dp"
        app:cardCornerRadius="6dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ayuda">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#B5B0B0" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:lineSpacingExtra="3dp"
                android:layout_marginTop="20dp"
                android:text="@string/consulta_admin"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:lineSpacingExtra="10dp"
                android:text="@string/texto_consulta_admin"
                android:textSize="12sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="15dp"
                android:backgroundTint="@color/fondo_fragment"
                android:text="@string/consultar_al_administrador"
                android:textColor="@color/black"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="40dp"
        android:background="#B5B0B0"
        app:layout_constraintTop_toBottomOf="@id/contacto" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/footer"
        android:name="com.example.checkintime.Menu_navegacio_alumno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout="@layout/fragment_menu_navegacio_alumno" />

</androidx.constraintlayout.widget.ConstraintLayout>