<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo_pantalla"
    tools:context=".Alumno_horario">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/header"
        android:name="com.example.checkintime.Header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout="@layout/fragment_header" />

    <ImageView
        android:id="@+id/menu"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="15dp"
        android:layout_marginTop="25dp"
        android:clickable="true"
        android:elevation="2dp"
        android:focusable="true"
        android:src="@drawable/menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/fondoMenu"
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:background="@color/fondo_menu"
        android:elevation="1dp"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/perfilMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="180dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/foto"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/fondo_circulo"
                    android:src="@drawable/foto_perfil" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/alumne"
                    android:textSize="10sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:text="Christopher Flores"
                    android:textSize="13sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Christopher_email"
                    android:textSize="9sp" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="70dp"
            android:background="#B5B0B0" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:backgroundTint="@color/fondo_menu"
            app:cardCornerRadius="6dp">

            <TextView
                android:id="@+id/perfilUsuario"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:clickable="true"
                android:drawablePadding="10dp"
                android:focusable="true"
                android:gravity="center_vertical"
                android:text="Perfil de usuario"
                app:drawableStartCompat="@drawable/customer" />
        </androidx.cardview.widget.CardView>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#B5B0B0" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:backgroundTint="@color/fondo_menu"
            app:cardCornerRadius="6dp">

            <TextView
                android:id="@+id/asistencia"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:clickable="true"
                android:drawablePadding="10dp"
                android:focusable="true"
                android:gravity="center_vertical"
                android:text="Asistencia"
                app:drawableStartCompat="@drawable/checklist" />
        </androidx.cardview.widget.CardView>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#B5B0B0" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:backgroundTint="@color/fondo_menu"
            app:cardCornerRadius="6dp">

            <TextView
                android:id="@+id/configuracion"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:clickable="true"
                android:drawablePadding="10dp"
                android:focusable="true"
                android:gravity="center_vertical"
                android:text="Configuracion"
                app:drawableStartCompat="@drawable/settings" />
        </androidx.cardview.widget.CardView>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#B5B0B0" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/horario"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/menu"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/horario"/>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/footer"
        android:name="com.example.checkintime.Menu_navegacio_alumno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout="@layout/fragment_menu_navegacio_alumno" />

</androidx.constraintlayout.widget.ConstraintLayout>